[package]
name = "apixels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
clap = { version = "4.2.1", features = ["derive"] }
anyhow = "1.0.68"
owo-colors = "3.5.0"
rayon = "1.7.0"
rust_decimal = { version = "1.29.1", features = [ "maths" ] }
rust_decimal_macros = "1.29.1"
color-thief = "0.2.2"
color_space = "0.5.3"
tokio = { version = "1.27.0", features = ["full"] }